<?xml version="1.0"?>
<package format="3">
  <name>urg_node_msgs</name>
  <version>1.0.1</version>
  <description>urg_node_msgs</description>

  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <maintainer email="tony.baltovski@gmail.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urg_node</url>
  <url type="bugtracker">https://github.com/ros-drivers/urg_node/issues</url>
  <url type="repository">https://github.com/ros-drivers/urg_node</url>

  <author email="chadrockey@gmail.com">Chad Rockey</author>
  <author email="modriscoll@clearpath.ai">Mike O'Driscoll</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
  </export>
</package>
